--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.data.jdbc.dialect=postgresql
 spring.liquibase.enabled=false
+
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=expireAfterWrite=10m
+
+logging.level.com.api.glovoCRM=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
