Задания для алинура

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,18 @@ spring.jpa.hibernate.ddl-auto=create
 spring.data.jdbc.dialect=postgresql
 spring.liquibase.enabled=false
 
+logging.level.org.hibernate=warn
+logging.level.org.hibernate.orm.connections=warn
+
+minio.endpoint=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.buckets.categories=categories
+minio.buckets.establishments=establishments
+minio.buckets.products=products
+minio.buckets.subcategories=subcategories
+
+spring.devtools.livereload.enabled=false
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=expireAfterWrite=10m
 
-logging.level.com.api.glovoCRM=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
