--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,18 @@ services:
     volumes:
       - glovo-data:/var/lib/postgresql/data
 
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"  # API порт
+      - "9001:9001"  # Консоль управления
+    volumes:
+      - minio_data:/data
+
 volumes:
-  glovo-data:
+  glovo-data: {}
+  minio_data: {}
