--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ logging.level.org.hibernate=warn
 logging.level.org.hibernate.orm.connections=warn
 
 minio.endpoint=http://localhost:9000
-minio.access-key=minioadmin
-minio.secret-key=minioadmin
+minio.access-key=9aGypqRtIlJtw1pwTUdQ
+minio.secret-key=i13tlVfUvTVyvtX7Tr3CVl1tT3Dw3oave2IQMJJL
 minio.buckets.categories=categories
 minio.buckets.establishments=establishments
 minio.buckets.products=products
