Shergazy commit Проверь

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.devtools.livereload.enabled=false
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=expireAfterWrite=10m
 
+springdoc.api-docs.path=/v1/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+
+server.port=8080
+
