develop commit Проверь.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.cache.caffeine.spec=expireAfterWrite=10m
 springdoc.api-docs.path=/v1/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 server.port=8080
 
