--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>3.4.2</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
