уровни транзакций потом прикручу. Коммит для шергазы позже сделаю.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,17 @@ spring.liquibase.enabled=false
 
 logging.level.org.hibernate=warn
 logging.level.org.hibernate.orm.connections=warn
+logging.level.root = info
 
 minio.endpoint=http://localhost:9000
-minio.access-key=9aGypqRtIlJtw1pwTUdQ
-minio.secret-key=i13tlVfUvTVyvtX7Tr3CVl1tT3Dw3oave2IQMJJL
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
 minio.buckets.categories=categories
 minio.buckets.establishments=establishments
 minio.buckets.products=products
 minio.buckets.subcategories=subcategories
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.devtools.livereload.enabled=false
 spring.cache.type=caffeine
