--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.org.hibernate=warn
 logging.level.org.hibernate.orm.connections=warn
 logging.level.root = info
 
+
 minio.endpoint=http://localhost:9000
 minio.access-key=minioadmin
 minio.secret-key=minioadmin
@@ -25,3 +26,7 @@ spring.devtools.livereload.enabled=false
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=expireAfterWrite=10m
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.title=Glovo API
