--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-# резервное копирование
 services:
   glovo-postgres:
     image: postgres:15-alpine
@@ -18,7 +17,12 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
 
   minio:
     image: minio/minio
@@ -36,6 +40,12 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
 
 volumes:
   glovo-data: {}
