--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.liquibase.enabled=false
 
 logging.level.org.hibernate=warn
 logging.level.org.hibernate.orm.connections=warn
+logging.level.com.api.glovoCRM.Models.EstablishmentModels = debug
 logging.level.root = info
 
 
@@ -19,12 +20,22 @@ minio.buckets.categories=categories
 minio.buckets.establishments=establishments
 minio.buckets.products=products
 minio.buckets.subcategories=subcategories
+minio.max-file-size-in-mb=10        
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+minio.buffer = 8192
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true     
+
+spring.task.execution.pool.core-size=4
+spring.task.execution.pool.max-size=8
+spring.task.execution.pool.queue-capacity=100
 
 spring.devtools.livereload.enabled=false
 spring.cache.type=caffeine
-spring.cache.caffeine.spec=expireAfterWrite=10m
+spring.cache.caffeine.spec=expireAfterWrite=20m
+cash.duration = 20
+cash.maxSize = 500
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
